Added blocks and flex structure

--- a/index.html
+++ b/index.html
@@ -1,3 +1,121 @@
-<title>
-    Tested file
-</title>
+<!doctype html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+
+    <link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.0/normalize.css">
+    <link rel="stylesheet" href="./flexboxgrid2.css">
+    <link rel="stylesheet" href="./styles.css">
+
+    <title>Uber Eats</title>
+</head>
+
+<body>
+    <header>
+        <div class="logo">
+            logo
+        </div>
+        <button class "header-button">
+            Sign In
+        </button>
+        <button class "header-button header-button_inverse">
+            Register
+        </button>
+        </div>
+    </header>
+    <nav>
+        <div class="container">
+            <div class="search-form">
+                <img class="search-form__icon">
+                <input class="search-form__input">
+            </div>
+            <div class="row">
+                <div class="col-xs-3">
+                    <div class="when">
+                        <p class="input-title">When</p>
+                        <input class="when__input" placeholder="ASAP">
+                    </div>
+                </div>
+
+                <div class="col-xs-9">
+                    <div class "where">
+                        <p class="input-title">To</p>
+                        <input class="where__input" placeholder="ul. Bolshaya Dmitrovka,22">
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </nav>
+    <main>
+        <h1 class="list-header">Moscow Restaurants</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <section class="rest">
+                        <img class="rest-photo" src="./img/rest/rest-mcdo.png" alt="Фото Макдоналдс — Газетный">
+                        <h2 class="rest-name">Макдоналдс — Газетный</h2>
+                        <p class="rest-details">₽ • Японская • Китайская • Азиатская</p>
+                        <p class="rest-delivery">40 - 50 Min</p>
+                    </section>
+                </div>
+                <div class="col-xs-12">
+                    <section class="rest">
+                        <img class="rest-photo" src="./img/rest/rest-dimsum.png" alt="Фото DimSum & Co — ЦДМ">
+                        <h2 class="rest-name">DimSum & Co — ЦДМ</h2>
+                        <p class="rest-details">₽ • Японская • Китайская • Азиатская</p>
+                        <p class="rest-delivery">40 - 50 Min</p>
+                    </section>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    logo
+                </div>
+                <div class="col-xs-12">
+                    divider
+                </div>
+                <div class="col-xs-12">
+                    dropdown
+                </div>
+                <div class="col-xs-12">
+                    social
+                </div>
+                <div class="col-xs-12">
+                    <a class="footer-link">About UberEats</a>
+                </div>
+                <div class="col-xs-12">
+                    <a class="footer-link">Become a Delivery Partner</a>
+                </div>
+                <div class="col-xs-12">
+                    <a class="footer-link">Become a Restaurant Partner</a>
+                </div>
+                <div class="col-xs-12">
+                    divider
+                </div>
+                <div class="col-xs-12">
+                    app stores
+                </div>
+                <div class="col-xs-12">
+                    divider
+                </div>
+                <div class="col-xs-12">
+                    Copyright
+                </div>
+                <div class="col-xs-12">
+                    <a class="footer-link footer-link-small">Privacy</a>
+                </div>
+                <div class="col-xs-12">
+                    <a class="footer-link footer-link-small">Terms</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+</body>
+
+</html>
